# Integrated_Project

./: CMakeLists.txt  README.md
Cmake_project/: CMakeLists.txt
Cmake_project/include/: my_Clib.h
Cmake_project/src/: helloCworld.c  my_Clib.c
project/: Makefile
project/include/: my_lib.h
project/src/: helloworld.c  my_lib.c
